# moveobjdetect

./: .gitignore  CMakeLists.txt  README.md
include/: common.h
sample/: detect.cpp  env.sh
src/: .gitignore  CMakeLists.txt  move_obj_detect.cpp  move_obj_detect.hpp
toolchain/: Linux-aarch64-3559A.cmake  Linux-x86_64.cmake
